@@ -1,3 +1,9 @@
+2008-04-22  Dan Williams  <dcbw@redhat.com>
+
+	* src/wireless-security/wireless-security.c
+		- (ws_802_1x_auth_combo_init): LEAP is not a valid wired 802.1x auth
+			method
+
 2008-04-18  Dan Williams  <dcbw@redhat.com>
 
 	* src/connection-editor/Makefile.am
